--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
     "php": ">=5.3.0",
     "psr/log": "~1.0"
   },
+  "require-dev": {
+    "phpunit/phpunit": "4.6.*"
+  },
   "autoload": {
     "psr-4": {
       "noFlash\\Shout\\": "src"
