--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "psr/log": "~1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.6.*"
+    "phpunit/phpunit": "4.6.*",
+    "mikey179/vfsStream": "~1"
   },
   "autoload": {
     "psr-4": {
