--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ php:
   - hhvm
   - nightly
 
-before_script: composer install
+before_script: composer install --dev
 script: phpunit --configuration phpunit.xml
