--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,10 @@
   },
   "provide": {
     "psr/log-implementation": "1.0.0"
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0.x-dev"
+    }
   }
 }
